--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,13 +10,9 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png">
 
   <title>
-    <%= title %> | Developersstreet
+    <%= title %>
   </title>
-  <meta name="description"
-    content="Developersstreet offers modern web development, SaaS, and startup solutions using the latest technologies like Laravel, Tailwind, and React.">
-  <meta name="keywords"
-    content="developersstreet, laravel, tailwind, react, html, css, bootstrap, web development, saas, software, responsive">
-  <meta name="author" content="Developersstreet Team">
+  <meta name="description" content="<%= description %>">
   <meta name="theme-color" content="#0f172a">
 
   <!-- Google Fonts: Montserrat -->
