--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,43 +293,57 @@
         </h2>
       </div>
       <div class="flex flex-wrap justify-center gap-4 lg:gap-6">
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="100">
-          <img src="assets/img/constructionmaterial.png" alt="Construction Material"
-            class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="200">
-          <img src="assets/img/iskconkanpur.png" alt="ISKCON Kanpur" class="mx-auto mb-3 w-[160px] h-[50px]"
-            loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="300">
-          <img src="assets/img/rcegroup.png" alt="RCE Group" class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="400">
-          <img src="assets/img/exlstudy.png" alt="EXL Study" class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="500">
-          <img src="assets/img/dechio.png" alt="Dechio" class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="100">
-          <img src="assets/img/bpaagra.png" alt="BPA Agra" class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="200">
-          <img src="assets/img/croyubusinesssolutions.png" alt="Croy Business Solutions"
-            class="mx-auto mb-3 w-[160px] h-[50px]" loading="lazy" />
-        </div>
-        <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center" data-aos="fade-up" data-aos-duration="400"
-          data-aos-delay="300">
-          <img src="assets/img/gaudivine-min.png" alt="Gaudivine" class="mx-auto mb-3 w-[160px] h-[50px]"
-            loading="lazy" />
-        </div>
-      </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">
+    <img src="assets/img/constructionmaterial.png" alt="Construction Material"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+    <img src="assets/img/iskconkanpur.png" alt="ISKCON Kanpur"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
+    <img src="assets/img/rcegroup.png" alt="RCE Group"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+    <img src="assets/img/exlstudy.png" alt="EXL Study"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="500">
+    <img src="assets/img/dechio.png" alt="Dechio"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">
+    <img src="assets/img/bpaagra.png" alt="BPA Agra"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+    <img src="assets/img/croyubusinesssolutions.png" alt="Croy Business Solutions"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+  <div class="w-1/2 md:w-1/2 lg:w-1/6 text-center h-[120px] flex items-center justify-center"
+    data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
+    <img src="assets/img/gaudivine-min.png" alt="Gaudivine"
+      class="w-[160px] h-[80px] object-contain" loading="lazy" />
+  </div>
+
+</div>
+
 
     </div>
 
