--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,18 +50,17 @@
               Who We Are
             </h2>
             <p class="text-gray-600 text-lg font-medium">
-              <strong>Developer's Street</strong> is a trusted web and mobile app development
-              company in India, helping startups, SMEs, and enterprises create scalable digital solutions.
-              From CMS websites to advanced SaaS platforms, we deliver performance-driven applications
-              tailored to your business needs.
+              <strong>Developer's Street</strong>is a platform for web application advancement
+              service incorporates everything from a straightforward CMS empowered site to growing incredible dynamic
+              web apps, custom business applications, web based business entries, and saas applications.
             </p>
 
-            <h3 class="text-gray-900 font-semibold text-xl">Custom Web Application Development</h3>
+            <!-- <h3 class="text-gray-900 font-semibold text-xl">Custom Web Application Development</h3>
             <p class="text-gray-600 text-lg font-medium">
               Our custom web design and development services ensure <strong>high performance,
                 security, scalability, and seamless user experience</strong>, empowering your business
               with future-ready digital solutions.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
