--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,7 +13,7 @@
             </div>
           </div>
           <h1 class="lg:text-[50px] md:text-5xl text-5xl lg:leading-[1] tracking-tight text-gray-900 font-bold mb-4 mt-3">
-            About Developer's Street
+            About Developers Street
           </h1>
           <p class="text-gray-600 font-medium text-[17px] lg:pr-5 mt-2">
             Empowering Businesses with Scalable Web & Mobile Solutions
@@ -39,7 +39,7 @@
               Who We Are
             </h2>
             <p class="text-gray-600 text-lg font-medium">
-              <strong>Developer's Street</strong> is a platform for web application advancement service incorporates everything from a straightforward CMS empowered site to growing incredible dynamic web apps, custom business applications, web based business entries, and saas applications.
+              <strong>Developers Street</strong> is a platform for web application advancement service incorporates everything from a straightforward CMS empowered site to growing incredible dynamic web apps, custom business applications, web based business entries, and saas applications.
             </p>
 
             <h3 class="text-gray-900 font-semibold text-xl">Custom Web Application Development</h3>
@@ -214,7 +214,7 @@
             Have questions? Here are some answers
           </h2>
           <p class="text-gray-700 font-normal leading-relaxed">
-            At <strong>Developer's Street</strong>, we help startups, SMEs, and enterprises with web and mobile app solutions. Here are answers to the most common queries our clients ask before starting their projects.
+            At <strong>Developers Street</strong>, we help startups, SMEs, and enterprises with web and mobile app solutions. Here are answers to the most common queries our clients ask before starting their projects.
           </p>
         </div>
 
@@ -223,7 +223,7 @@
 
             <div class="border border-gray-200 bg-white rounded-lg shadow-md">
               <button class="accordion-header w-full flex justify-between items-center px-5 py-4 text-left text-gray-900 font-medium focus:outline-none">
-                <span class="text-base sm:text-lg">Q1. What services does Developer's Street provide?</span>
+                <span class="text-base sm:text-lg">Q1. What services does Developers Street provide?</span>
                 <svg class="accordion-icon w-5 h-5 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                 </svg>
