--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -73,11 +73,39 @@
         <div class="flex items-center gap-3 mt-4">
           <p class="text-gray-400 text-xs">Follow us:</p>
           <ul class="flex gap-4 ml-2">
-            <li><a href="#" aria-label="facebook" class="text-gray-300 hover:text-white text-lg"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#" aria-label="twitter" class="text-gray-300 hover:text-white text-lg"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#" aria-label="linkedin" class="text-gray-300 hover:text-white text-lg"><i class="fab fa-linkedin-in"></i></a></li>
+            <li>
+              <a href="https://www.facebook.com/developersstreet" target="_blank" rel="noopener noreferrer"
+                aria-label="Facebook" class="text-gray-300 hover:text-white text-lg">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://x.com/developerstreet" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter)"
+                class="text-gray-300 hover:text-white text-lg">
+                <i class="fab fa-x-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/company/developers-street/" target="_blank" rel="noopener noreferrer"
+                aria-label="LinkedIn" class="text-gray-300 hover:text-white text-lg">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/@developersstreet" target="_blank" rel="noopener noreferrer"
+                aria-label="YouTube" class="text-gray-300 hover:text-white text-lg">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/developersstreet" target="_blank" rel="noopener noreferrer"
+                aria-label="Instagram" class="text-gray-300 hover:text-white text-lg">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
           </ul>
         </div>
+
       </div>
 
       <!-- Footer Links -->
