--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,7 +30,7 @@
       <!-- Who We Are -->
       <div class="grid md:grid-cols-2 grid-cols-1 items-center gap-10 pb-16">
         <div>
-          <img src="assets/img/about.png" alt="Web development company in India" class="object-cover w-full rounded-2xl shadow-lg" loading="eager">
+          <img src="/assets/img/about.png" alt="Web development company in India" class="object-cover w-full rounded-2xl shadow-lg" loading="eager">
         </div>
 
         <div>
