--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,26 +49,26 @@
         <!-- Main Image Container -->
         <div class="relative rounded-xl lg:overflow-visible overflow-hidden" data-aos="fade-up" data-aos-duration="600">
           <!-- Main Image -->
-          <img src="/assets/images/home-1/right-banner-bg.webp" alt="banner" class="w-full rounded-xl" width="637"
+          <img src="/assets/img/developersstreet.png" alt="banner" class="w-full rounded-xl" width="637"
             height="721" loading="eager" />
 
           <!-- Floating Icon (overlapping top-left) -->
-          <div
+          <!-- <div
             class="absolute top-16 left-10 -translate-x-1/2 lg:flex w-16 h-16 rounded-xl bg-lime-300 items-center justify-center hidden z-20">
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="text-gray-900"
               viewBox="0 0 16 16">
               <path
                 d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434zM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567zM7.5 9.933l-2.75 1.571v3.134l2.75-1.571zm1 3.134 2.75 1.571v-3.134L8.5 9.933zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567zm2.242-2.433V3.504L8.5 5.076V8.21zM7.5 8.21V5.076L4.75 3.504v3.134zM5.258 2.643 8 4.21l2.742-1.567L8 1.076zM15 9.933l-2.75 1.571v3.134L15 13.067zM3.75 14.638v-3.134L1 9.933v3.134z" />
             </svg>
-          </div>
+          </div> -->
 
           <!-- Floating Badge (overlapping top-right) -->
-          <div class="absolute top-6 right-6 hidden lg:flex z-20">
+          <!-- <div class="absolute top-6 right-6 hidden lg:flex z-20">
             <span class="inline-block bg-primary text-white px-4 py-2 rounded-full font-medium shadow-md"
               data-aos="fade-down" data-aos-duration="500">
               Trusted by 100+ Clients
             </span>
-          </div>
+          </div> -->
 
           <!-- Testimonial Box (overlapping bottom-right) -->
           <!-- {{-- <div class="absolute bottom-8 right-6 bg-white p-4 rounded-xl shadow-lg max-w-xs hidden lg:flex z-20"
@@ -79,7 +79,7 @@
       </div> --}} -->
 
           <!-- Vertical Slider (overlapping bottom-left) -->
-          <div class="absolute bottom-0 left-0 z-20 m-5 flex flex-col w-full">
+          <!-- <div class="absolute bottom-0 left-0 z-20 m-5 flex flex-col w-full">
             <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-[135px] slider-no-dots">
               <div class="splide__track">
                 <ul class="splide__list">
@@ -95,7 +95,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
