--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,16 +11,17 @@
       <!-- Logo -->
       <div class="flex items-center w-full 2xl:w-3/6 xl:w-1/3 lg:w-1/3">
         <a href="/" class="inline-block relative">
-          <img src="/assets/img/full-logo-footer.png" alt="logo" class="h-10 w-auto" loading="lazy" />
+          <img src="/assets/img/full-logo-footer.png" alt="logo" class="h-12 lg:h-14 w-auto" loading="lazy" />
         </a>
       </div>
+
 
       <!-- Contact Info -->
       <div class="w-full 2xl:w-3/6 xl:w-2/3 lg:w-2/3">
         <div class="flex flex-wrap gap-y-3">
 
           <!-- Phone -->
-          <div class="flex flex-row gap-3 items-center w-full md:w-1/2">
+          <a href="tel:+919412892908" class="flex flex-row gap-3 items-center w-full md:w-1/2 hover:opacity-80">
             <div class="bg-gray-800 p-3 rounded-full flex items-center justify-center">
               <span class="material-symbols-outlined text-white text-sm">call</span>
             </div>
@@ -28,10 +29,11 @@
               <p class="text-sm font-semibold mb-0">+91 9412892908</p>
               <p class="text-xs font-medium text-gray-400">Speak with our team</p>
             </div>
-          </div>
+          </a>
 
           <!-- Email -->
-          <div class="flex flex-row gap-3 items-center w-full md:w-1/2">
+          <a href="mailto:thedevelopersstreet@gmail.com"
+            class="flex flex-row gap-3 items-center w-full md:w-1/2 hover:opacity-80">
             <div class="bg-gray-800 p-3 rounded-full flex items-center justify-center">
               <span class="material-symbols-outlined text-white text-sm">mail</span>
             </div>
@@ -39,7 +41,8 @@
               <p class="text-sm font-semibold mb-0">thedevelopersstreet@gmail.com</p>
               <p class="text-xs font-medium text-gray-400">Chat with our team</p>
             </div>
-          </div>
+          </a>
+
         </div>
       </div>
 
