--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <div class="font-montserrat">
 
   <!-- page title -->
-  <div class="absolute top-0 left-0 w-full h-96 font-montserrat bg-light-blue-banner lg:pt-24 pt-12"></div>
+  <div class="absolute top-0 left-0 w-full h-96 font-montserrat lg:pt-24 pt-12"></div>
 
   <!-- contact wrap -->
   <div class="contact-wrap font-montserrat z-10 lg:pt-24 pt-12">
