--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7237,3 +7237,21 @@ video {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+
+/*# Header */
+@keyframes modalShow {
+    0% {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.animate-modalShow {
+    animation: modalShow 0.3s ease-out forwards;
+}
