--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <!-- Page Title -->
-<div class="page-title bg-light-blue-banner lg:pt-20 pt-16">
+<div class="page-title  lg:pt-20 pt-16">
   <div class="max-w-screen-xl mx-auto px-3 sm:px-6 md:px-14 lg:px-14 xl:px-20 2xl:px-24 lg:py-24 py-16">
     <div class="flex justify-center">
       <div class="w-full lg:w-7/12 text-center">
