--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!-- banner wrap -->
-<div class="banner-wrap lg:pb-24 pb-12 font-montserrat bg-home-one-gradient-banner relative pt-24">
+<div class="banner-wrap lg:pb-24 pb-12 font-montserrat relative pt-24">
   <!-- Top-left image -->
-  <img src="/assets/images//svg/svg-diagram-1.png" alt="diagram" class="hidden lg:flex absolute start-5 top-0"
-    loading="eager" />
+  <!-- <img src="/assets/images//svg/svg-diagram-1.png" alt="diagram" class="hidden lg:flex absolute start-5 top-0"
+    loading="eager" /> -->
   <!-- Bottom-right rotated image -->
-  <img src="/assets/images//svg/svg-diagram-1.png" alt="diagram"
-    class="hidden lg:flex absolute end-5 bottom-5 rotate-180" loading="eager" />
+  <!-- <img src="/assets/images//svg/svg-diagram-1.png" alt="diagram"
+    class="hidden lg:flex absolute end-5 bottom-5 rotate-180" loading="eager" /> -->
   <!-- banner -->
   <div class="max-w-screen-xl mx-auto px-3 sm:px-6 md:px-14 lg:px-14 xl:px-18 2xl:px-3 pb-0">
     <div class="grid lg:grid-cols-2 grid-cols-1 gap-10 lg:pt-10 relative z-10">
@@ -24,9 +24,9 @@
         </h2>
 
         <!-- Who We Are -->
-        <h3 class="text-gray-800 font-semibold lg:text-xl text-lg mt-4 mb-2" data-aos="fade-up" data-aos-duration="500">
+        <!-- <h3 class="text-gray-800 font-semibold lg:text-xl text-lg mt-4 mb-2" data-aos="fade-up" data-aos-duration="500">
           Who We Are
-        </h3>
+        </h3> -->
         <p class="font-medium text-gray-900 max-w-xl text-lg mb-4" data-aos="fade-up" data-aos-duration="550">
           Developers Street
           We welcome you to be a part of an organization that helps you to earn from your dreams. Yes, we create dreams
@@ -35,13 +35,13 @@
         </p>
 
         <!-- Custom Web Application Development -->
-        <h3 class="text-gray-800 font-semibold lg:text-xl text-lg mt-4 mb-2" data-aos="fade-up" data-aos-duration="550">
+        <!-- <h3 class="text-gray-800 font-semibold lg:text-xl text-lg mt-4 mb-2" data-aos="fade-up" data-aos-duration="550">
           Custom Web Application Development
         </h3>
         <p class="font-medium text-gray-900 max-w-xl text-lg mb-4" data-aos="fade-up" data-aos-duration="600">
           Our custom web design and development services ensure high performance, security, scalability, and
           seamless user experience, empowering your business with future-ready digital solutions.
-        </p>
+        </p> -->
       </div>
 
       <!-- right side -->
@@ -347,7 +347,7 @@
     <!-- CTA Section -->
     <div class="mt-16 text-center" data-aos="fade-up" data-aos-duration="400">
       <h3 class="text-2xl font-bold text-gray-900 mb-4">Have a project in mind? Let’s connect!</h3>
-      <a href="/contact"
+      <a href="/contact-us/"
         class="inline-flex items-center justify-center gap-2 px-5 py-3 bg-primary text-white rounded-lg text-base font-medium hover:bg-primary/90 transition-all duration-200">
         Contact Us
       </a>
@@ -1072,7 +1072,7 @@
     </div>
 
     <div class="flex flex-col sm:flex-row justify-center gap-3 pt-6">
-      <a href="/contact" class="inline-flex items-center justify-center gap-2 px-5 py-3 
+      <a href="/contact-us/" class="inline-flex items-center justify-center gap-2 px-5 py-3 
          bg-primary text-white text-base font-medium rounded-lg 
          hover:bg-primary/90 transition-all duration-200" data-aos="zoom-in" data-aos-duration="400">
         <span>Contact Us</span>
