--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header
-  class="header-wrapper w-full fixed top-0 left-0 border-b border-gray-200 py-0 bg-transparent z-20 transition-all duration-300 ease-in-out">
+  class="header-wrapper w-full fixed top-0 left-0 border-b border-gray-200 py-0 bg-white z-20 transition-all duration-300 ease-in-out">
   <div class="menu-overlay fixed inset-0 bg-black/40 hidden z-40 lg:hidden"></div>
 
   <div class="max-w-screen-xl mx-auto px-2 sm:px-4 md:px-6 lg:px-8 xl:px-10 2xl:px-12 pb-0">
